added base HTML elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <header>
+            <img src="" alt="">
+            <h1>Library App</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Library</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Placeholder</a></li>
+                    <li><a href="#">Placeholder</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h2>My Books</h2>
+            <p>This is your library of books! Keep on reading, it's great! </p>
+            <div>
+
+            </div>
+        </main>
+        <footer>
+            <h4>About</h4>
+            <p>I created this project while going through the Odin Project. I'm hoping this can be a portfolio piece to show that I can put together a full app using vanilla Javascript and CSS.</p>
+            <p>You can find more of me and my work below. Thanks for checking out my site!</p>
+            <ul>
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href=""><img src="" alt=""></a></li>
+            </ul>
+        </footer>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
