--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <div id="container">
         <header>
-            <img src="" alt="">
+            <img src="placeholder" alt="placeholder">
             <h1>Library App</h1>
             <nav>
                 <ul>
