added image to header and done with title part of the page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <div id="container">
         <header>
-            <img src="placeholder" alt="placeholder">
+            <div id="headerFlex">
             <h1>Library App</h1>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
