changed font for link and placed the main content headings

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -27,9 +27,9 @@
             </nav>
         </header>
         <main>
-            <h2>My Books</h2>
+            <h2 id="contentHeader">My Books</h2>
             <p>This is your library of books! Keep on reading, it's great! </p>
-            <div>
+            <div class="bookContainer">
 
             </div>
         </main>
