--- a/index.html
+++ b/index.html
@@ -37,6 +37,34 @@
                     <p>pages</p>
                     <p>Read</p>
                 </div>
+                <div class="card">
+                    <img src="./libraryImage.jpg" alt="">
+                    <h3>Title</h3>
+                    <p>Author</p>
+                    <p>pages</p>
+                    <p>Read</p>
+                </div>
+                <div class="card">
+                    <img src="./libraryImage.jpg" alt="">
+                    <h3>Title</h3>
+                    <p>Author</p>
+                    <p>pages</p>
+                    <p>Read</p>
+                </div>
+                <div class="card">
+                    <img src="./libraryImage.jpg" alt="">
+                    <h3>Title</h3>
+                    <p>Author</p>
+                    <p>pages</p>
+                    <p>Read</p>
+                </div>
+                <div class="card">
+                    <img src="./libraryImage.jpg" alt="">
+                    <h3>Title</h3>
+                    <p>Author</p>
+                    <p>pages</p>
+                    <p>Read</p>
+                </div>
                 
             </div>
         </main>
