styled the footer

--- a/index.html
+++ b/index.html
@@ -37,34 +37,6 @@
                     <p>pages</p>
                     <p>Read</p>
                 </div>
-                <div class="card">
-                    <img src="./libraryImage.jpg" alt="">
-                    <h3>Title</h3>
-                    <p>Author</p>
-                    <p>pages</p>
-                    <p>Read</p>
-                </div>
-                <div class="card">
-                    <img src="./libraryImage.jpg" alt="">
-                    <h3>Title</h3>
-                    <p>Author</p>
-                    <p>pages</p>
-                    <p>Read</p>
-                </div>
-                <div class="card">
-                    <img src="./libraryImage.jpg" alt="">
-                    <h3>Title</h3>
-                    <p>Author</p>
-                    <p>pages</p>
-                    <p>Read</p>
-                </div>
-                <div class="card">
-                    <img src="./libraryImage.jpg" alt="">
-                    <h3>Title</h3>
-                    <p>Author</p>
-                    <p>pages</p>
-                    <p>Read</p>
-                </div>
                 
             </div>
         </main>
@@ -73,9 +45,9 @@
             <p>I created this project while going through the Odin Project. I'm hoping this can be a portfolio piece to show that I can put together a full app using vanilla Javascript and CSS.</p>
             <p>You can find more of me and my work below. Thanks for checking out my site!</p>
             <ul>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href="">temp<img src="" alt=""></a></li>
+                <li><a href="">temp<img src="" alt=""></a></li>
+                <li><a href="">temp<img src="" alt=""></a></li>
             </ul>
         </footer>
     </div>
