added icons to the footer links and changed where images are stored

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>This is your library of books! Keep on reading, it's great! </p>
             <div class="bookContainer">
                 <div class="card">
-                    <img src="./libraryImage.jpg" alt="">
+                    <img src="./images/libraryImage.jpg" alt="">
                     <h3>Title</h3>
                     <p>Author</p>
                     <p>pages</p>
@@ -45,9 +45,10 @@
             <p>I created this project while going through the Odin Project. I'm hoping this can be a portfolio piece to show that I can put together a full app using vanilla Javascript and CSS.</p>
             <p>You can find more of me and my work below. Thanks for checking out my site!</p>
             <ul>
-                <li><a href="">temp<img src="" alt=""></a></li>
-                <li><a href="">temp<img src="" alt=""></a></li>
-                <li><a href="">temp<img src="" alt=""></a></li>
+                <li><a href="https://github.com/TurnerHelical" target="_blank"><img src="./images/github-mark.png" alt="github icon"></a></li>
+                <li><a href="https://hunter-leclair.netlify.app/" target="_blank"><img src="./images/portfolio.png" alt="portfolio icon"></a></li>
+                <li><a href="https://www.linkedin.com/in/hunter-leclair-51039b2bb/" target="_blank"><img src="./images/LI-In-Bug.png" alt="linkedin icon"></a></li>
+                <li><a href="www.theodinproject.com" target="_blank"><img src="https://www.theodinproject.com/mstile-310x310.png" alt="Odin Project icon"></a></li>
             </ul>
         </footer>
     </div>
