working on adding book cards with javascript

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <h2 id="contentHeader">My Books</h2>
             <p>This is your library of books! Keep on reading, it's great! </p>
             <div class="bookContainer">
-                <div class="card">
+                <!-- <div class="card">
                     <img src="./images/libraryImage.jpg" alt="">
                     <h3>Title</h3>
                     <p>Author</p>
                     <p>pages</p>
                     <p>Read</p>
-                </div>
+                </div> -->
                 
             </div>
         </main>
