added javascript function to append card to page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
                     <p>Author</p>
                     <p>pages</p>
                     <p>Read</p>
+                    <div id="cardButtonContainer">
+                        <button>Finished it!</button>
+                        <button>Delete</button>
+                    </div>
                 </div> -->
                 
             </div>
