added Add Book button and styled it

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <main>
             <h2 id="contentHeader">My Books</h2>
             <p>This is your library of books! Keep on reading, it's great! </p>
+            <button id="addBook">Add Book</button>
             <div class="bookContainer">
                 <!-- <div class="card">
                     <img src="./images/libraryImage.jpg" alt="">
