--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Boldonse&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="formContainer">
+        <form action="">
+            <label for="title">Title: </label>
+            <input type="text" name="title" id="title">
+
+            <label for="author">Author: </label>
+            <input type="text" name="author" id="author">
+
+            <label for="pages">Number of pages: </label>
+            <input type="number" name="pages" id="pages">
+
+            <label for="image">Image path: </label>
+            <input type="url" name="image" id="image">
+        </form>
+    </div>
     <div id="container">
         <header>
             <div id="headerFlex">
@@ -31,7 +46,7 @@
             <p>This is your library of books! Keep on reading, it's great! </p>
             <button id="addBook">Add Book</button>
             <div class="bookContainer">
-                <!-- <div class="card">
+                <div class="card">
                     <img src="./images/libraryImage.jpg" alt="">
                     <h3>Title</h3>
                     <p>Author</p>
@@ -41,7 +56,7 @@
                         <button>Finished it!</button>
                         <button>Delete</button>
                     </div>
-                </div> -->
+                </div>
                 
             </div>
         </main>
