added js to open form modal

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </form>
     </div>
-    <div id="container" class="modalOpen">
+    <div id="container">
         <header>
             <div id="headerFlex">
             <h1>Library App</h1>
