edited function to make the delete button work

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p>This is your library of books! Keep on reading, it's great! </p>
             <button id="addBook">Add Book</button>
             <div class="bookContainer">
-                <div class="card">
+                <!-- <div class="card">
                     <img src="./images/libraryImage.jpg" alt="">
                     <h3>Title</h3>
                     <p>Author</p>
@@ -76,7 +76,7 @@
                         <button>Finished it!</button>
                         <button>Delete</button>
                     </div>
-                </div>
+                </div> -->
                 
             </div>
         </main>
