functionality works as intended, just need to add validation and check for dupes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="formContainer" class="modalClose">
-        <form action="">
+        <div id="form">
             <h2 id="formTitle">Add Book Here!</h2>
 
             <label for="title" class="textlabel">Title: </label>
@@ -44,7 +44,7 @@
                 <button id="formCancel">Cancel</button>
 
             </div>
-        </form>
+        </div>
     </div>
     <div id="container">
         <header>
