--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <label for="pages" class="textlabel">Number of pages: </label>
             <input type="number" name="pages" id="pages">
 
-            <label for="image" class="textlabel">Image URL: </label>
+            <label for="image" class="textlabel">Image URL(Optional): </label>
             <input type="url" name="image" id="image">
             <div id="readStatus">
 
